Implemented error handling Fixed broken links. Implemented custom handlers (ErrorController) for handling 404 and 500 errors. Implemented Dev Tools. Configured IntelliJ to support Dev Tools. Closes #47

--- a/pet-clinic-web/src/main/resources/templates/error-500.html
+++ b/pet-clinic-web/src/main/resources/templates/error-500.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>Sorry</title>
 </head>
 <body>
-<h2 th:text="#{welcome}">Welcome</h2>
+
+<h2 th:text="'Something Went Wrong. Our Developer Are Looking At It...500'">Sorry</h2>
 
 <div class="row">
     <div class="col-md-12">
