--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -3,11 +3,11 @@
       th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
-    <title>List of Vets</title>
+    <title>Vets</title>
 </head>
 <body>
 <!--/*@thymesVar id="vet" type="com.vjava.sfgpetclinic.model.Vet"*/-->
-<h2 th:text="'List of Vets'">List of Vets</h2>
+<h2 th:text="'Vets'">Vets</h2>
 
 <table class="table table-striped">
     <thead>
