--- a/pet-clinic-web/src/main/resources/templates/notimpmeneted.html
+++ b/pet-clinic-web/src/main/resources/templates/notimpmeneted.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>Not Implemented Yet!</title>
 </head>
 <body>
-<h2 th:text="#{welcome}">Welcome</h2>
+
+<h2 th:text="'Not Implemented Yet!!'">Not Implemented Yet!</h2>
 
 <div class="row">
     <div class="col-md-12">
