--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">>
 <head>
     <meta charset="UTF-8">
-    <title>List of Pet Owners</title>
+    <title>Pet Owners</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="com.vjava.sfgpetclinic.model.Owner"*/-->
-<h2 th:text="'List of Pet Owners'">List of Pet Owners</h2>
+<h2 th:text="'Pet Owners'">Pet Owners</h2>
 
 <table class="table table-striped">
     <thead>
