--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
+      th:replace="~{fragments/layout :: layout (~{::body},'vets')}">>
 <head>
     <meta charset="UTF-8">
-    <title>Vets</title>
+    <title>Veterinarians</title>
 </head>
 <body>
-<!--/*@thymesVar id="vet" type="com.vjava.sfgpetclinic.model.Vet"*/-->
-<h2 th:text="'Vets'">Vets</h2>
 
-<table class="table table-striped">
+<h2>Veterinarians</h2>
+
+<table id="vets" class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Name</th>
+        <th>Specialties</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="vet : ${vets}">
-        <td th:text="${vet.id}"></td>
-        <td th:text="${vet.firstName}"></td>
-        <td th:text="${vet.lastName}"></td>
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td><span th:each="specialty : ${vet.specialitySet}"
+                  th:text="${specialty.description + '; '}" /> <span
+                th:if="${vet?.specialitySet?.size() == 0}">none</span></td>
     </tr>
     </tbody>
 </table>
